[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-wrapper"
version = "0.1.0"
description = "A tool to generate schema wrapper classes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
generate-schema-wrapper = "schema_wrapper.generate_schema_wrapper:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_wrapper*"]
